--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "scripts": {
     "start": "nodemon server.ts"
   },
-  
   "dependencies": {
     "@types/node": "^20.10.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
