--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ts-jest": "^29.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
