--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "nodemon server.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "rimraf dist && tsc"
   },
   "dependencies": {
     "@types/jest": "^29.5.11",
@@ -14,12 +15,14 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
+    "serverless-http": "^3.2.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@types/express": "^4.17.21",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
